source/objects/Churn__c/Churn__c.object-meta.xml
<CustomObject>
    <description>SaaS Analysis</description>
    <label>Churn</label>
    <nameField>
        <label>Churn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Churn</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>