source/objects/Churn__c/fields/Average_of_New_User_Licenses_per_New_C__c.field-meta.xml
<CustomField>
    <fullName>Average_of_New_User_Licenses_per_New_C__c</fullName>
    <label>Average # of New User Licenses per New C</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>