source/objects/Churn__c/fields/Customer_Churn__c.field-meta.xml
<CustomField>
    <fullName>Customer_Churn__c</fullName>
    <label>Customer Churn %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>