source/objects/Churn__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>