source/objects/Churn__c/fields/Net_User_Churn__c.field-meta.xml
<CustomField>
    <fullName>Net_User_Churn__c</fullName>
    <label>Net User Churn %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>