source/objects/Churn__c/fields/Net_Users_Added_from_BOY_existing_Custom__c.field-meta.xml
<CustomField>
    <fullName>Net_Users_Added_from_BOY_existing_Custom__c</fullName>
    <label>Net Users Added from BOY existing Custom</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>