source/objects/Churn__c/fields/New_Dealers_Added_in_CY__c.field-meta.xml
<CustomField>
    <fullName>New_Dealers_Added_in_CY__c</fullName>
    <label>New Dealers Added in CY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>