source/objects/Churn__c/fields/Total_Customers_BOY__c.field-meta.xml
<CustomField>
    <fullName>Total_Customers_BOY__c</fullName>
    <label>Total Customers, BOY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>