source/objects/Churn__c/fields/Total_Customers_Churned__c.field-meta.xml
<CustomField>
    <fullName>Total_Customers_Churned__c</fullName>
    <label>Total Customers Churned</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>