source/objects/Churn__c/fields/Total_Customers_Q_End__c.field-meta.xml
<CustomField>
    <fullName>Total_Customers_Q_End__c</fullName>
    <label>Total # Customers, Q-End</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>