source/objects/Churn__c/fields/Total_New_Customers_Added__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Customers_Added__c</fullName>
    <label>Total New Customers Added  in CY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>