source/objects/Churn__c/fields/Total_New_Customers_added_in_CY_non_dea__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Customers_added_in_CY_non_dea__c</fullName>
    <label>Total New Customers added in CY (non-dea</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>