source/objects/Churn__c/fields/Total_New_Users_Added_from_New_Customers__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Users_Added_from_New_Customers__c</fullName>
    <label>Total New Users Added from New Customers</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>