source/objects/Churn__c/fields/Total_New_Users_Added_in_CY_from_new_Dea__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Users_Added_in_CY_from_new_Dea__c</fullName>
    <label>Total New Users Added in CY from new Dea</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>