source/objects/Churn__c/fields/Total_Users_End_of_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Users_End_of_Period__c</fullName>
    <label>Total # Users, End of Period</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>