source/objects/Churn__c/fields/User_Churn__c.field-meta.xml
<CustomField>
    <fullName>User_Churn__c</fullName>
    <label>User Churn %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>